--- a/package.json
+++ b/package.json
@@ -13,11 +13,17 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@hookform/resolvers": "^5.2.2",
     "@mui/material": "^7.0.1",
+    "axios": "^1.13.2",
     "clsx": "^2.1.1",
+    "jotai": "^2.16.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tss-react": "^4.9.16"
+    "react-hook-form": "^7.69.0",
+    "react-router-dom": "^7.11.0",
+    "tss-react": "^4.9.16",
+    "zod": "^4.2.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
